--- a/docker/services/frontend/html/config-candlestick.html
+++ b/docker/services/frontend/html/config-candlestick.html
@@ -2083,14 +2083,14 @@
     <main class="container">
         <!-- Tabs -->
         <div class="tabs">
-            <button class="tab" onclick="switchTab('status')">Status</button>
-            <button class="tab active" onclick="switchTab('patterns')">Pattern Detection</button>
+            <button class="tab active" onclick="switchTab('status')">Status</button>
+            <button class="tab" onclick="switchTab('patterns')">Pattern Detection</button>
             <button class="tab" onclick="switchTab('history')">Pattern History</button>
             <button class="tab" onclick="switchTab('revalidation')">Re-Validierung <span id="revalidationBadge" class="tab-badge" style="display: none;">0</span></button>
         </div>
 
         <!-- Tab: Status -->
-        <div id="tab-status" class="tab-content">
+        <div id="tab-status" class="tab-content active">
 
             <!-- Training Service Status -->
             <div class="card">
@@ -2195,7 +2195,7 @@
         </div><!-- End Tab: Status -->
 
         <!-- Tab: Pattern Detection -->
-        <div id="tab-patterns" class="tab-content active">
+        <div id="tab-patterns" class="tab-content">
 
         <!-- Combined Stats & Service Info -->
         <div class="card" style="margin-bottom: 1.5rem;">
@@ -3352,10 +3352,7 @@
             document.getElementById(`tab-${tabName}`).classList.add('active');
 
             // Load data based on tab
-            if (tabName === 'history') {
-                initHistoryFilters();
-                loadPatternHistory();
-            } else if (tabName === 'training') {
+            if (tabName === 'status') {
                 loadTrainingServiceInfo();
                 loadFeedbackStats();
                 loadTrainingStatus();
@@ -3364,6 +3361,15 @@
                 // Start auto-refresh for training status
                 if (!trainingRefreshInterval) {
                     trainingRefreshInterval = setInterval(loadTrainingStatus, 5000);
+                }
+            } else if (tabName === 'history') {
+                initHistoryFilters();
+                loadPatternHistory();
+
+                // Stop auto-refresh
+                if (trainingRefreshInterval) {
+                    clearInterval(trainingRefreshInterval);
+                    trainingRefreshInterval = null;
                 }
             } else if (tabName === 'revalidation') {
                 loadRevalidationData();
@@ -3374,7 +3380,7 @@
                     trainingRefreshInterval = null;
                 }
             } else {
-                // Stop auto-refresh when leaving training tab
+                // Stop auto-refresh when leaving status tab
                 if (trainingRefreshInterval) {
                     clearInterval(trainingRefreshInterval);
                     trainingRefreshInterval = null;
@@ -5962,6 +5968,17 @@
             await loadPatterns();
             await loadStatistics();
             await updateRevalidationBadge();
+
+            // Status-Tab Daten laden (da Status-Tab standardmäßig aktiv ist)
+            await loadTrainingServiceInfo();
+            await loadFeedbackStats();
+            await loadTrainingStatus();
+            await loadTrainingJobs();
+
+            // Status-Tab Auto-Refresh starten
+            if (!trainingRefreshInterval) {
+                trainingRefreshInterval = setInterval(loadTrainingStatus, 5000);
+            }
 
             // Auto-Scan standardmäßig starten (ohne Toast-Nachricht)
             if (isAutoScanRunning) {
