--- a/docker/services/frontend/html/config-candlestick.html
+++ b/docker/services/frontend/html/config-candlestick.html
@@ -2456,18 +2456,29 @@
                         </div>
 
                         <!-- Begründung für Korrektur/Ablehnung -->
-                        <div id="reasonSection" style="margin-top: 1rem; padding: 0.75rem; background: rgba(255,255,255,0.03); border-radius: 8px; display: none;">
-                            <div style="font-size: 0.85rem; color: #aaa; margin-bottom: 0.5rem;">
-                                Begründung (optional, für Regelwerk-Verbesserung):
+                        <div id="reasonSection" style="margin-top: 1rem; padding: 0.75rem; background: rgba(100,200,255,0.08); border: 1px solid rgba(100,200,255,0.2); border-radius: 8px; display: none;">
+                            <div style="font-size: 0.9rem; font-weight: 600; color: #64c8ff; margin-bottom: 0.5rem;">
+                                <span id="reasonSectionTitle">Begründung für Ablehnung</span>
+                            </div>
+                            <div style="font-size: 0.85rem; color: #aaa; margin-bottom: 0.75rem;">
+                                Wähle einen Grund, damit die Erkennungsregeln verbessert werden können:
                             </div>
                             <div style="display: flex; gap: 0.75rem; align-items: flex-start; flex-wrap: wrap;">
-                                <select id="reasonCategorySelect" style="padding: 0.5rem; background: #252540; color: #fff; border: 1px solid rgba(255,255,255,0.2); border-radius: 6px; min-width: 200px;" onchange="onReasonCategoryChange()">
-                                    <option value="">-- Grund wählen --</option>
+                                <select id="reasonCategorySelect" style="padding: 0.5rem; background: #252540; color: #fff; border: 1px solid rgba(255,255,255,0.2); border-radius: 6px; min-width: 220px;" onchange="onReasonCategoryChange()">
+                                    <option value="">-- Grund wählen (optional) --</option>
                                 </select>
                                 <input type="text" id="reasonTextInput" placeholder="Zusätzliche Details (z.B. 'Körper ist 15% statt max. 10%')"
                                        style="flex: 1; min-width: 200px; padding: 0.5rem; background: #252540; color: #fff; border: 1px solid rgba(255,255,255,0.2); border-radius: 6px;">
                             </div>
                             <div id="reasonDescription" style="margin-top: 0.5rem; font-size: 0.8rem; color: #888; font-style: italic;"></div>
+                            <div style="margin-top: 1rem; display: flex; gap: 0.75rem;">
+                                <button class="btn btn-primary" id="btnSubmitWithReason" onclick="submitPendingFeedback()" style="padding: 0.5rem 1.5rem;">
+                                    💾 Feedback speichern
+                                </button>
+                                <button class="btn btn-secondary" onclick="cancelPendingFeedback()" style="padding: 0.5rem 1rem;">
+                                    Abbrechen
+                                </button>
+                            </div>
                         </div>
 
                         <div id="correctionFeedback" style="margin-top: 0.5rem; font-size: 0.85rem; display: none;"></div>
@@ -4222,13 +4233,19 @@
             document.getElementById('patternModal').classList.remove('show');
             document.body.style.overflow = '';
             currentModalPattern = null;
+            pendingFeedback = null;  // Clear pending feedback
+            showReasonSection(false);
         }
+
+        // Pending feedback state for two-step submission
+        let pendingFeedback = null;
 
         // Confirm pattern is correct
         async function confirmPattern() {
             if (!currentModalPattern) return;
-            // Hide reason section for confirmations
+            // Hide reason section for confirmations (no reason needed)
             showReasonSection(false);
+            pendingFeedback = null;
             await submitPatternFeedback(currentModalPattern, 'confirmed', currentModalPattern.pattern_type);
         }
 
@@ -4238,19 +4255,59 @@
             const correctedPattern = document.getElementById('correctionPatternSelect').value;
             if (!correctedPattern) {
                 showCorrectionFeedback('Bitte wählen Sie das korrekte Pattern aus.', 'warning');
-                // Show reason section for corrections
-                showReasonSection(true);
                 return;
             }
-            await submitPatternFeedback(currentModalPattern, 'corrected', correctedPattern);
+            // Store pending feedback and show reason section
+            pendingFeedback = {
+                pattern: currentModalPattern,
+                feedbackType: 'corrected',
+                correctedPattern: correctedPattern
+            };
+            document.getElementById('reasonSectionTitle').textContent =
+                `Begründung für Korrektur zu "${formatPatternType(correctedPattern)}"`;
+            showReasonSection(true);
+            // Populate reason categories for this pattern type
+            await populateReasonCategories(currentModalPattern.pattern_type);
         }
 
         // Mark as no pattern (false positive)
         async function markAsNoPattern() {
             if (!currentModalPattern) return;
-            // Show reason section for rejections
+            // Store pending feedback and show reason section
+            pendingFeedback = {
+                pattern: currentModalPattern,
+                feedbackType: 'rejected',
+                correctedPattern: 'no_pattern'
+            };
+            document.getElementById('reasonSectionTitle').textContent = 'Begründung für Ablehnung';
             showReasonSection(true);
-            await submitPatternFeedback(currentModalPattern, 'rejected', 'no_pattern');
+            // Populate reason categories for this pattern type
+            await populateReasonCategories(currentModalPattern.pattern_type);
+        }
+
+        // Submit the pending feedback (called from reason section button)
+        async function submitPendingFeedback() {
+            if (!pendingFeedback) {
+                showCorrectionFeedback('Kein Feedback ausstehend.', 'warning');
+                return;
+            }
+            await submitPatternFeedback(
+                pendingFeedback.pattern,
+                pendingFeedback.feedbackType,
+                pendingFeedback.correctedPattern
+            );
+            pendingFeedback = null;
+        }
+
+        // Cancel pending feedback
+        function cancelPendingFeedback() {
+            pendingFeedback = null;
+            showReasonSection(false);
+            // Reset reason fields
+            document.getElementById('reasonCategorySelect').value = '';
+            document.getElementById('reasonTextInput').value = '';
+            document.getElementById('reasonDescription').textContent = '';
+            showCorrectionFeedback('Feedback abgebrochen.', 'info');
         }
 
         // Get reason data from UI
